# cortex-v2

./: .gitignore  .rustfmt.toml  Cargo.toml  cortex.toml  deny.toml
.github/workflows/: _rust-service.yml  ci.yml
crates/cortex-core/: Cargo.toml
crates/cortex-core/benches/: registry_bench.rs
crates/cortex-core/src/: config.rs  lib.rs  registry.rs  router.rs  types.rs
crates/cortex-core/src/router/: mod.rs  pipeline.rs
crates/cortex-core/src/router/steps/: failover.rs
crates/cortex-core/src/worker/: error.rs  mod.rs  registry.rs  trait_def.rs
crates/cortex-gateway/: Cargo.toml
crates/cortex-gateway/src/: main.rs
docs/open-spec/: 01-requirements.md  02-design.md  02b-resilience-guide.md  03-tasks.md  README.md
