[package]
name = "cortex-gateway"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
cortex-core = { path = "../cortex-core" }
toml = "0.8"                                                                                                                        
axum = "0.8"                                                                                                                        
tokio = { version = "1", features = ["full"] }
